--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "ngStarter",
-  "version": "0.0.0",
-  "private": true,
+  "name": "MangleApp",
+  "version": "1.0.1",
+  "private": false,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node server"
   },
   "dependencies": {
     "body-parser": "^1.13.2",
