--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "MangleApp",
+  "name": "mangle-app",
   "version": "1.0.1",
   "authors": [
     "alvin-pivowar <alvin@ng-al.com>"
@@ -13,10 +13,10 @@
     "tests"
   ],
   "dependencies": {
-    "angular-messages": "^1.4.5",
-    "angular-route": "^1.4.5",
-    "angular": "^1.4.5",
-    "angular-bootstrap": "^0.14.2",
-    "bootstrap": "^3.3.5"
+    "angular": "^1.6.1",
+    "angular-bootstrap": "^2.5.0",
+    "angular-messages": "^1.6.1",
+    "angular-route": "^1.6.1",
+    "bootstrap": "^3.3.7"
   }
 }
